--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,15 @@
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+*.iml
+*.xml
+*.log
+
+.idea/
+
+# Executable
+1source-go
+
+# Debug
+__debug_*
